스케줄 프로젝트 수정 및 코멘트 entity 작성